--- a/roles/common/tasks/setup-RedHat.yml
+++ b/roles/common/tasks/setup-RedHat.yml
@@ -1,26 +1,26 @@
 ---
 
-- name: disk durumuna bak
+- name: check disk status
   shell: "df -h /"
   args:
     executable: "/bin/bash"
   register: disk 
 
-- name: disk durumunu göster
+- name: show disk status
   debug:
     msg: "{{disk.stdout_lines }}"
 
-- name: RedHat rsyslog kurma
+- name: install rsyslog on RedHat
   yum:
     name: rsyslog
     state: present
   when: ansible_distribution_major_version == "7"
 
-- name: RedHat rsyslog kurma
+- name: install rsyslog on RedHat
   dnf:
     name: rsyslog
     state: present
   when: ansible_distribution_major_version == "8"
 
-- name: rsyslog service restart
+- name: restart rsyslog service
   service: "name=rsyslog state=restarted" 
